--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
         <title>Brian Whicheloe</title>
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-        <link rel="shortcut icon" href="favicon.ico" id="favicon">
+        <link rel="shortcut icon" href="icons/favicon.ico" id="favicon">
+        <link rel="manifest" href="manifest.json">
     </head>
 
     <body>
