Add theme color for real

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
         <link rel="shortcut icon" href="icons/favicon.ico" id="favicon">
         <link rel="manifest" href="manifest.json">
+        <meta name="theme-color" content="#4e4e4e">
     </head>
 
     <body>
