--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Brian Whicheloe</title>
 
+        <meta name="description" content="Brian Whicheloe is a full stack, full time developer. He is currently the Director of Development at Clever.ly. He's currently specializing in full stack Javascript">
+        <meta name="author" content="Brian Whicheloe">
+        <!-- <meta property="og:image" content="Profile image goes here"> -->
+
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+
         <link rel="shortcut icon" href="icons/favicon.ico" id="favicon">
         <link rel="manifest" href="manifest.json">
         <meta name="theme-color" content="#4e4e4e" id="theme_color">
+        <meta name="msapplication-TileColor" content="#ffc40d">
+        <meta name="msapplication-TileImage" content="/icons/w_168.png">
     </head>
 
     <body>
